--- a/UserHouse.Data/UserHouse.Infrastructure.csproj
+++ b/UserHouse.Data/UserHouse.Infrastructure.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets></PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.14" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 
