--- a/UserHouse.Domain/UserHouse.Application.csproj
+++ b/UserHouse.Domain/UserHouse.Application.csproj
@@ -6,10 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UserHouse.Data\UserHouse.Data.csproj" />
+    <ProjectReference Include="..\UserHouse.Data\UserHouse.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
