--- a/UserHouse/appsettings.json
+++ b/UserHouse/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=userhouseDb;user=root;password=123qwe;"
+    "Default": "YOUR_DB_CONNECTION_HERE"
   },
   "Logging": {
     "LogLevel": {
