Add Auth, Roles, Permissions, Seeding

--- a/UserHouse/appsettings.json
+++ b/UserHouse/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "YOUR_DB_CONNECTION_HERE"
+    "Default": "Server=localhost; Database=userhouseDb; user=root; password=123qwe;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth": {
+    "Issuer": "authServer",
+    "Audience": "resourceServer",
+    "Secret": "secretKey1234567890+-",
+    "TokenLifeTime": "3600" 
+  }
 }
