--- a/UserHouse.Domain/UserHouse.Application.csproj
+++ b/UserHouse.Domain/UserHouse.Application.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="FluentValidation" Version="10.2.3" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.2.3" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.14.1" />
   </ItemGroup>
 
   <ItemGroup>
