--- a/UserHouse/Properties/launchSettings.json
+++ b/UserHouse/Properties/launchSettings.json
@@ -21,7 +21,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "TOTAL_PAGES": "10"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
