--- a/UserHouse/Properties/launchSettings.json
+++ b/UserHouse/Properties/launchSettings.json
@@ -22,7 +22,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "TOTAL_PAGES": "10"
+        "TOTAL_PAGES": "10",
+        "SECRET_KEY_PASSWORD": "userhouse114"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
