--- a/UserHouse/appsettings.json
+++ b/UserHouse/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=userhouseDb; user=root; password=123qwe;"
+    "Default": "YOUR_DB_CONNECTION_HERE"
   },
   "Logging": {
     "LogLevel": {
@@ -14,6 +14,6 @@
     "Issuer": "authServer",
     "Audience": "resourceServer",
     "Secret": "secretKey1234567890+-",
-    "TokenLifeTime": "3600" 
+    "TokenLifeTime": "3600" //1 hour
   }
 }
